# OpinionSentinel

./: .env.example  .gitignore  README.md  docker-compose.yml  fix_dashboard.py  package.json
.github/agents/: review-monitor.agent.md
apps/api/: .env  demo.local.db  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py  llm.py
apps/api/app/crawlers/: __init__.py  adapters.py  base.py  demo_adapters.py  runners.py
apps/api/app/data/: __init__.py  demo_data.py  demo_store.py  runtime.db
apps/api/app/db/: session.py
apps/api/app/integrations/: __init__.py  notifier.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/pipelines/: __init__.py  normalization.py  normalize.py  sentiment.py
apps/api/app/routes/: alerts.py  articles.py  company.py  dashboard.py  reports.py  rules.py  system.py
apps/api/app/schemas/: __init__.py  alert.py  article.py  common.py  dashboard.py  domain.py  report.py  rule.py
apps/api/app/search/: __init__.py  mappings.py  query_builder.py
apps/api/app/services/: __init__.py  alert_service.py  article_service.py  company_service.py  dashboard_service.py  report_service.py  rule_service.py
apps/api/app/tasks/: celery_app.py  report_tasks.py
apps/web/public/exports/: daily-2026-05-23.html
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/components/: app-shell.tsx  article-table.tsx  company-profile-form.tsx  distribution-list.tsx  frontend-runtime-logger.tsx  panel.tsx  report-export-form.tsx  sentiment-pill.tsx  (+2 more)
docs/: architecture.md  product-plan.md
(+13 files in other folders)
