[project]
name = "reputation-monitor-api"
version = "0.1.0"
description = "FastAPI backend for the company reputation monitoring MVP"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.1",
  "celery>=5.4.0",
  "redis>=5.0.7",
  "elasticsearch>=8.14.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "tenacity>=9.0.0",
  "reportlab>=4.2.0",
  "anthropic>=0.40.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
